--- a/Common.Ui/SafeguardForm.xaml
+++ b/Common.Ui/SafeguardForm.xaml
@@ -1,15 +1,16 @@
-﻿<UserControl x:Class="SafeguardAddin.SafeguardForm"
+﻿<UserControl x:Class="Safeguard.Common.Ui.SafeguardForm"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SafeguardAddin"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
+             xmlns:ui="clr-namespace:Safeguard.Common.Ui"
              mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance local:AddinViewModel}"
+             d:DataContext="{d:DesignInstance ui:AddinViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
-        <local:ToVisibilityConverter x:Key="ToVisibilityConverter"/>
-        <local:ToVisibilityConverterInverse x:Key="ToVisibilityConverterInverse"/>
+        <ui:ToVisibilityConverter x:Key="ToVisibilityConverter"/>
+        <ui:ToVisibilityConverterInverse x:Key="ToVisibilityConverterInverse"/>
     </UserControl.Resources>
     <Grid>
         <StackPanel Margin="5" Visibility="{Binding IsAuthenticated, Converter={StaticResource ToVisibilityConverterInverse}}">
@@ -21,7 +22,7 @@
             <TextBlock TextWrapping="Wrap">Okay, you are logged in now. Run a report...</TextBlock>
             <ComboBox ItemsSource="{Binding Reports}" SelectedItem="{Binding SelectedReport}">
                 <ComboBox.ItemTemplate>
-                    <DataTemplate DataType="{x:Type local:Report}">
+                    <DataTemplate DataType="{x:Type ui:Report}">
                         <TextBlock Text="{Binding Name}"></TextBlock>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
