--- a/Test.Ui/App.xaml
+++ b/Test.Ui/App.xaml
@@ -1,7 +1,6 @@
-﻿<Application x:Class="Safeguard.UiTest.App"
+﻿<Application x:Class="Safeguard.Test.Ui.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Safeguard.UiTest"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
