--- a/Test.Ui/MainWindow.xaml
+++ b/Test.Ui/MainWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="Safeguard.UiTest.MainWindow"
+﻿<Window x:Class="Safeguard.Test.Ui.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Safeguard.UiTest"
+        xmlns:ui="clr-namespace:Safeguard.Common.Ui;assembly=Safeguard.Common.Ui"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <ui:SafeguardForm x:Name="SafeguardForm"></ui:SafeguardForm>
     </Grid>
 </Window>
