--- a/Test.Ui/App.xaml
+++ b/Test.Ui/App.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+         <ResourceDictionary>
+             
+         </ResourceDictionary>
     </Application.Resources>
 </Application>
